fix: fixed note list jumping while textarea is active

--- a/src/pages/notes/components/note/Note.module.scss
+++ b/src/pages/notes/components/note/Note.module.scss
@@ -1,204 +1,205 @@
 .wrapper {
-	padding: 20px 40px 20px 0;
-	display: flex;
-	justify-content: center;
-	flex: 1;
-	position: relative;
+  padding: 20px 40px 20px 0;
+  display: flex;
+  justify-content: center;
+  flex: 1;
+  position: relative;
 
-	@media screen and (max-width: 580px) {
-		padding: 20px 10px;
-	}
+  @media screen and (max-width: 580px) {
+    padding: 20px 10px;
+  }
 }
 
 .deleteNoteButton {
-	position: absolute;
-	bottom: 10px;
-	left: 50%;
-	transform: translateX(-50%);
-	display: flex;
-	align-items: center;
-	gap: 10px;
-	border: none;
-	background-color: var(--secondary-dark);
-	color: var(--white-for-dark);
-	border-radius: 10px;
-	font-size: 20px;
-	padding: 5px 10px;
+  position: absolute;
+  bottom: 10px;
+  left: 50%;
+  transform: translateX(-50%);
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  border: none;
+  background-color: var(--secondary-dark);
+  color: var(--white-for-dark);
+  border-radius: 10px;
+  font-size: 20px;
+  padding: 5px 10px;
 
-	> img {
-		width: 30px;
-		height: 30px;
-	}
+  > img {
+    width: 30px;
+    height: 30px;
+  }
 }
 
 .inner {
-	display: flex;
-	flex-direction: column;
-	// align-items: center;
-	gap: 19px;
-	width: 100%;
+  display: flex;
+  flex-direction: column;
+  // align-items: center;
+  gap: 19px;
+  width: 100%;
 
-	@media screen and (max-width: 580px) {
-		overflow-y: auto;
-	}
+  @media screen and (max-width: 580px) {
+    overflow-y: auto;
+  }
 }
 
 .search {
-	position: relative;
-	align-self: flex-start;
-	margin-left: 20px;
+  position: relative;
+  align-self: flex-start;
+  margin-left: 20px;
 
-	@media screen and (max-width: 1024px) {
-		display: none;
-	}
+  @media screen and (max-width: 1024px) {
+    display: none;
+  }
 }
 
 .searchInput {
-	width: 280px;
-	height: 35px;
-	border-radius: 10px;
-	background-color: var(--secondary-dark);
-	color: #fff;
-	border: none;
-	padding: 0 20px 0 40px;
+  width: 280px;
+  height: 35px;
+  border-radius: 10px;
+  background-color: var(--secondary-dark);
+  color: #fff;
+  border: none;
+  padding: 0 20px 0 40px;
 
-	@media screen and (max-width: 1850px) {
-		width: 200px;
-	}
+  @media screen and (max-width: 1850px) {
+    width: 200px;
+  }
 
-	@media screen and (max-width: 1440px) {
-		width: 160px;
-	}
+  @media screen and (max-width: 1440px) {
+    width: 160px;
+  }
 
-	@media screen and (max-width: 1240px) {
-		width: 220px;
-	}
+  @media screen and (max-width: 1240px) {
+    width: 220px;
+  }
 
-	@media screen and (max-width: 1124px) {
-		width: 160px;
-	}
+  @media screen and (max-width: 1124px) {
+    width: 160px;
+  }
 }
 
 .searchImage {
-	position: absolute;
-	left: 10px;
-	top: 13%;
+  position: absolute;
+  left: 10px;
+  top: 13%;
 
-	> img {
-		width: 70%;
-	}
+  > img {
+    width: 70%;
+  }
 }
 
 .content {
-	display: flex;
+  display: flex;
+  height: 100%;
 
-	@media screen and (max-width: 900px) {
-		margin-top: 50px;
-	}
+  @media screen and (max-width: 900px) {
+    margin-top: 50px;
+  }
 }
 
 .noteItem {
-	padding: 50px 40px;
-	width: 80%;
+  padding: 50px 40px;
+  width: 80%;
 
-	@media screen and (max-width: 1240px) {
-		padding: 25px 20px;
-		width: 70%;
-	}
+  @media screen and (max-width: 1240px) {
+    padding: 25px 20px;
+    width: 70%;
+  }
 
-	@media screen and (max-width: 1124px) {
-		width: 75%;
-	}
+  @media screen and (max-width: 1124px) {
+    width: 75%;
+  }
 
-	@media screen and (max-width: 1024px) {
-		width: 100%;
-	}
+  @media screen and (max-width: 1024px) {
+    width: 100%;
+  }
 
-	@media screen and (max-width: 580px) {
-		padding: 15px 10px;
-	}
+  @media screen and (max-width: 580px) {
+    padding: 15px 10px;
+  }
 }
 
 .noteTitle {
-	font-size: 66px;
-	margin-bottom: 60px;
+  font-size: 66px;
+  margin-bottom: 60px;
 
-	@media screen and (max-width: 1240px) {
-		font-size: 50px;
-		margin-bottom: 40px;
-	}
+  @media screen and (max-width: 1240px) {
+    font-size: 50px;
+    margin-bottom: 40px;
+  }
 
-	@media screen and (max-width: 900px) {
-		font-size: 42px;
-		margin-bottom: 30px;
-	}
+  @media screen and (max-width: 900px) {
+    font-size: 42px;
+    margin-bottom: 30px;
+  }
 
-	@media screen and (max-width: 650px) {
-		font-size: 32px;
-		margin-bottom: 20px;
-	}
+  @media screen and (max-width: 650px) {
+    font-size: 32px;
+    margin-bottom: 20px;
+  }
 
-	@media screen and (max-width: 425px) {
-		font-size: 26px;
-	}
+  @media screen and (max-width: 425px) {
+    font-size: 26px;
+  }
 }
 
 .noteText {
-	font-size: 26px;
-	max-height: 600px;
-	overflow-y: auto;
+  font-size: 26px;
+  max-height: 600px;
+  overflow-y: auto;
 
-	@media screen and (max-width: 1240px) {
-		font-size: 24px;
-	}
+  @media screen and (max-width: 1240px) {
+    font-size: 24px;
+  }
 
-	@media screen and (max-width: 900px) {
-		font-size: 20px;
-	}
+  @media screen and (max-width: 900px) {
+    font-size: 20px;
+  }
 
-	@media screen and (max-width: 650px) {
-		font-size: 18px;
-	}
+  @media screen and (max-width: 650px) {
+    font-size: 18px;
+  }
 
-	@media screen and (max-width: 425px) {
-		font-size: 16px;
-	}
+  @media screen and (max-width: 425px) {
+    font-size: 16px;
+  }
 }
 
 .noteTextArea {
-	background-color: transparent;
-	border: none;
-	resize: none;
-	outline: none;
-	width: 100%;
-	height: 600px;
-	overflow-y: auto;
-	color: var(--white-for-dark);
-	font-size: 26px;
+  background-color: transparent;
+  border: none;
+  resize: none;
+  outline: none;
+  width: 100%;
+  height: 600px;
+  overflow-y: auto;
+  color: var(--white-for-dark);
+  font-size: 26px;
 
-	@media screen and (max-width: 1240px) {
-		font-size: 24px;
-	}
+  @media screen and (max-width: 1240px) {
+    font-size: 24px;
+  }
 
-	@media screen and (max-width: 900px) {
-		font-size: 20px;
-	}
+  @media screen and (max-width: 900px) {
+    font-size: 20px;
+  }
 
-	@media screen and (max-width: 650px) {
-		font-size: 18px;
-	}
+  @media screen and (max-width: 650px) {
+    font-size: 18px;
+  }
 
-	@media screen and (max-width: 425px) {
-		font-size: 16px;
-	}
+  @media screen and (max-width: 425px) {
+    font-size: 16px;
+  }
 }
 
 .noteTitleInput {
-	width: 100%;
-	font-size: 66px;
-	margin-bottom: 60px;
-	border: none;
-	background-color: transparent;
-	outline: none;
-	color: var(--white-for-dark);
+  width: 100%;
+  font-size: 66px;
+  margin-bottom: 60px;
+  border: none;
+  background-color: transparent;
+  outline: none;
+  color: var(--white-for-dark);
 }
