--- a/src/pages/notes/components/notes-list/NotesList.module.scss
+++ b/src/pages/notes/components/notes-list/NotesList.module.scss
@@ -59,6 +59,8 @@
     overflow: auto;
     width: 20%;
     border-right: 1px solid var(--main-gray);
+    justify-content: start;
+    height: 100%;
 
     @media screen and (max-width: 1240px) {
       width: 30%;
@@ -75,15 +77,23 @@
     & .note {
       border-radius: 0;
       background-color: transparent;
-      border: none;
+      border-bottom: 1px solid var(--secondary-dark);
+      height: 80px;
 
       &:global(.activeNote) {
         background-color: var(--secondary-dark);
+      }
+
+      & .noteLink .noteText {
+        display: none;
       }
     }
 
     & .note .noteLink {
       padding: 5px 30px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
 
       @media screen and (max-width: 1240px) {
         padding: 5px 15px;
@@ -91,9 +101,11 @@
     }
 
     & .note .noteLink .noteTitle {
-      font-size: 32px;
+      font-size: 26px;
       font-weight: 400;
-      margin-bottom: 15px;
+      margin-bottom: 0px;
+      max-height: 62px;
+      overflow: hidden;
 
       @media screen and (max-width: 1240px) {
         font-size: 26px;
@@ -125,6 +137,7 @@
   width: 100%;
   height: 100%;
   display: inline-block;
+  overflow: hidden;
 }
 
 .noteTitle {
